[fix] Fix batch denormalization [fix] Fix APASE test data [wip] STart APASE extraction documentation